src/exam/tests/t008.gpl
int a=4444;
double q = a > 5   ? 99 : 88;
int r = a < 5   ? 99.9 : 88.8;
double name = q>r ? "bilbo" : "baggins";
